--- a/1.mision/html/1.mision.html
+++ b/1.mision/html/1.mision.html
@@ -78,7 +78,10 @@
     <footer>
         <div class="foot">
             <div class="foot-wrap">
-                <p>믿을 수 있는 판다마켓 중고 거래</p>
+                <p>
+                    믿을 수 있는<br>
+                    판다마켓 중고 거래
+                </p>
                 <div class="foot-img"></div>
             </div>    
         </div>
